adding the README.md file and correcting the js file path in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         </form>
     </div>
-<script src="codes.js"></script>
+<script src="countrycodes.js"></script>
 <script src="script.js"> </script>
 
 </body>
